# assistant

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Jenkinsfile  Makefile  README.md  bot-values.yaml  docker-compose.yaml  sqlite.db
.github/workflows/: rust.yml
data/: prompt.txt
docker/: dev.dockerfile  main.dockerfile
helm/: values.dev.yaml  values.prod.yaml  values.yaml
rust_bot/: Cargo.toml  README.md  sqlite.db
rust_bot/context/: faq.html
rust_bot/data/: instructions.txt  query.txt
rust_bot/instruction/: instruction.txt  instructions.txt
rust_bot/src/: assistant.rs  completion.rs  function.rs  lib.rs  main.rs
rust_bot/static/: chat.css  chat.js  index.html
src/: assistant.rs  chat_handlers.rs  completion.rs  handlers.rs  main.rs
static/: index.html
test/: chat_integration.rs
tests/: assistant_create.rs  assistant_integration.rs
