[package]
name = "rust_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "*"
env_logger = "*"
dotenv = "0.15"
tokio = { version = "*", features = ["full"] }
axum = "*"
reqwest = { version = "*", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "mysql"] }

[dev-dependencies]
tokio-test = "0.4"
tower= "0.4"
