[package]
name = "rust_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "*"
env_logger = "*"
dotenv = "0.15"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "mysql"] }
tower-http = { version = "0.5.1", features = ["fs"] }
axum = "0.7.4"
http = "1.0.0"
openssl = { version = "0.10.59", features = ["vendored"] }

[dev-dependencies]
tokio-test = "0.4"
tower= "0.4"
